CLEANUP: Remove legacy code
